# C-lab

./: README.md
Client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Client/src/: client.c
Server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Server/src/: i2c.c  i2c.h  server.c  server.h
doc/html/: annotated.html  classes.html  client_8c.html  client_8c__incl.dot  client_8c__incl.md5  dir_1a445cb237d74f7a5f8d11ec3b0585cc.html  dir_71db3c9ac669ad0e48d6cd88f7e1e924.html  dir_922c588100a187620fdc1533bc178f73.html  dir_e21a975877c3b6a07268dea683df1add.html  files.html  globals.html  globals_func.html  graph_legend.html  i2c_8c.html  i2c_8c__incl.dot  i2c_8c__incl.md5  i2c_8h_source.html  index.html  server_8c.html  server_8c__incl.dot  server_8c__incl.md5  server_8h_source.html  structaccData.html  structaccData__t.html  structgyroData.html  structgyroData__t.html
doc/html/search/: all_2.js  all_6.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
doc/latex/: annotated.tex  client_8c.tex  client_8c.tex.tmp  client_8c__incl.dot  client_8c__incl.md5  dir_1a445cb237d74f7a5f8d11ec3b0585cc.tex  dir_71db3c9ac669ad0e48d6cd88f7e1e924.tex  dir_922c588100a187620fdc1533bc178f73.tex  dir_e21a975877c3b6a07268dea683df1add.tex  files.tex  i2c_8c.tex  i2c_8c.tex.tmp  i2c_8c__incl.dot  i2c_8c__incl.md5  refman.tex  server_8c.tex  server_8c__incl.dot  server_8c__incl.md5  structaccData.tex  structaccData__t.tex  structgyroData.tex  structgyroData__t.tex
